# net-track-alpha

./: .gitattributes  .gitignore  README.md  package-lock.json
android-collector-app/: README.md  settings.gradle.kts
android-collector-app/app/: build.gradle.kts
android-collector-app/app/src/main/: AndroidManifest.xml
android-collector-app/app/src/main/res/values-night/: themes.xml
android-collector-app/gradle/: libs.versions.toml
android-collector-app/gradle/wrapper/: gradle-wrapper.properties
cell-sig-dash/: .env.example  .gitignore  package.json  pnpm-lock.yaml  turbo.json
cell-sig-dash/apps/backend/: pyproject.toml
cell-sig-dash/apps/backend/src/: main.py
cell-sig-dash/apps/backend/src/api/: map.py
cell-sig-dash/apps/backend/src/schemas/: telemetry.py
cell-sig-dash/apps/backend/src/utils/: config.py  database.py
cell-sig-dash/apps/frontend/: package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
cell-sig-dash/apps/frontend/public/: sri_lanka_districts.geojson
cell-sig-dash/apps/frontend/src/: App.css  App.tsx  SriLankaChoropleth.tsx  index.css  main.tsx
cell-sig-dash/apps/frontend/src/assets/: lka_admin4.dbf  lka_admin4.shp  lka_admin4.shx
cell-sig-dash/apps/frontend/src/components/: HexMap.tsx  KPICards.tsx  Layout.tsx  MapBoxCoverageMap.tsx  Sidebar.tsx
cell-sig-dash/apps/frontend/src/lib/: ThemeContext.tsx  theme.ts
cell-sig-dash/apps/frontend/src/pages/: HomePage.tsx  RouteAnalysis.tsx
pi-core/: README.md
pot-gps/: GPS.ino  Listner.ino  README.md
sys-env-health/: README.md  esp32.ino
(+16 files in other folders)
