[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "motor",
  "redis[asyncio] (>=7.4.0,<8.0.0)",
  "pydantic",
  "python-dotenv",
  "openai (>=2.32.0,<3.0.0)"
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^24.8.0"

[tool.poetry]
package-mode = false
